--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -18,6 +18,7 @@
             <li><a href="/products">Products</a></li>
             <li><a href="/services">Services</a></li>
             <li><a href="/articles">Articles</a></li>
+            <li><a href="/users">Users</a></li>
             <li><a href="/about">About Us</a></li>
             <li><a href="/contact">Contact Us</a></li>
         <% } else if(title == "Products") { %>
@@ -25,6 +26,7 @@
             <li class="active"><a href="/products">Products</a></li>
             <li><a href="/services">Services</a></li>
             <li><a href="/articles">Articles</a></li>
+            <li><a href="/users">Users</a></li>
             <li><a href="/about">About Us</a></li>
             <li><a href="/contact">Contact Us</a></li>
         <% } else if(title == "Services") { %>
@@ -32,6 +34,7 @@
             <li><a href="/products">Products</a></li>
             <li class="active"><a href="/services">Services</a></li>
             <li><a href="/articles">Articles</a></li>
+            <li><a href="/users">Users</a></li>
             <li><a href="/about">About Us</a></li>
             <li><a href="/contact">Contact Us</a></li>
         <% } else if(title == "Articles") { %>
@@ -39,6 +42,15 @@
             <li><a href="/products">Products</a></li>
             <li><a href="/services">Services</a></li>
             <li class="active"><a href="/articles">Articles</a></li>
+            <li><a href="/users">Users</a></li>
+            <li><a href="/about">About Us</a></li>
+            <li><a href="/contact">Contact Us</a></li>
+            <% } else if(title == "Users") { %>
+            <li><a href="/">Home</a></li>
+            <li><a href="/products">Products</a></li>
+            <li><a href="/services">Services</a></li>
+            <li><a href="/articles">Articles</a></li>
+            <li class="active"><a href="/users">Users</a></li>
             <li><a href="/about">About Us</a></li>
             <li><a href="/contact">Contact Us</a></li>
         <% } else if(title == "About") { %>
@@ -46,6 +58,7 @@
             <li><a href="/products">Products</a></li>
             <li><a href="/services">Services</a></li>
             <li><a href="/articles">Articles</a></li>
+            <li><a href="/users">Users</a></li>
             <li class="active"><a href="/about">About Us</a></li>
             <li><a href="/contact">Contact Us</a></li>
          <% } else if(title == "Contact") { %>
@@ -53,6 +66,7 @@
             <li><a href="/products">Products</a></li>
             <li><a href="/services">Services</a></li>
             <li><a href="/articles">Articles</a></li>
+            <li><a href="/users">Users</a></li>
             <li><a href="/about">About Us</a></li>
             <li class="active"><a href="/contact">Contact Us</a></li>
          <% } %>
