updated users and index.ejs

--- a/server/views/users/add.ejs
+++ b/server/views/users/add.ejs
@@ -12,6 +12,14 @@
             <label for="password" class="col-sm-2">Password: *</label>
             <input type="password" />
         </fieldset>
+        <fieldset class="form-group">
+            <label for="email" class="col-sm-2">Email: *</label>
+            <input type="email" />
+        </fieldset>
+        <fieldset class="form-group">
+            <label for="displayName" class="col-sm-2">DisplayName: *</label>
+            <input type="text" />
+        </fieldset>
         <button type="submit" class="col-sm-offset-2 btn btn-success">Submit</button>
 
     </form>
