--- a/server/views/users/edit.ejs
+++ b/server/views/users/edit.ejs
@@ -12,6 +12,14 @@
             <label for="password" class="col-sm-2">Password: *</label>
             <input type="password" required value="<%= user.userName %>" />
         </fieldset>
+        <fieldset class="form-group">
+            <label for="email" class="col-sm-2">emai: *</label>
+            <input type="email" required value="<%= user.email %>" />
+        </fieldset>
+        <fieldset class="form-group">
+            <label for="displayName" class="col-sm-2">DisplayName: *</label>
+            <input type="text" required value="<%= user.displayName %>" />
+        </fieldset>
         <button type="submit" class="col-sm-offset-2 btn btn-success">Submit</button>
 
         <a href="/users/delete/<%= user._id %>" title="Delete" onclick="return confirm('Are you sure you want to delete this?');">
